<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

  <ImageView
      android:id="@+id/image_contact_thumbnail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:srcCompat="@drawable/ic_person_outline_black_96dp"/>

  <TextView
      android:id="@+id/text_contact_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="Filipe Guedes"/>

  <TextView
      android:id="@+id/text_contact_phone_number"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="11 974-605-298"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:text="Valor a enviar:"/>

  <EditText
      android:id="@+id/edit_text_transaction_value"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:hint="@string/transaction_value_hint"
      android:inputType="numberDecimal"/>

  <Button
      android:id="@+id/button_send_money"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:text="@string/send"/>

</LinearLayout>
