<resources>
  <string name="app_name">Teste Neon</string>
  <string name="send_money">Enviar dinheiro</string>
  <string name="transaction_history">Histórico de envios</string>
  <string name="developer_name">Filipe Guedes</string>
  <string name="developer_email">fgs.guedes@gmail.com</string>
  <string name="transaction_value_hint">22,50</string>
  <string name="send">Enviar</string>
  <string name="invalid_transaction_value">Valor inserido é inválido</string>
  <string name="transaction_sent">Transação enviada com sucesso</string>
  <string name="transaction_error">Não foi possível enviar a transação</string>
</resources>
